imagesFromCsv, fix retry, fix charset